--- a/ap/templates/users/profile_edit.html
+++ b/ap/templates/users/profile_edit.html
@@ -7,13 +7,13 @@
 
 {% block content %}
 
-  <header class="masthead faqs text-white text-center">
+  <header class="masthead profiles text-white text-center">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
           <h1 class="mb-5">
-            change this
+            Edit Your Profile
           </h1>
         </div>
       </div>
