--- a/ap/templates/users/index.html
+++ b/ap/templates/users/index.html
@@ -4,19 +4,17 @@
 
 {% block content %}
 
-  <header class="masthead faqs text-white text-center">
+  <header class="masthead profiles text-white text-center">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">How does this work?<br />
-            Click a role below to learn more.
+          <h1 class="mb-5">Find athletes<br />
           </h1>
         </div>
       </div>
     </div>
   </header>
-
 
   <div class="container">
     <div class="row">
