--- a/ap/templates/faqs/section.html
+++ b/ap/templates/faqs/section.html
@@ -5,6 +5,19 @@
 
 {% block content %}
 
+  <header class="masthead faqs text-white text-center">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <h1 class="mb-5">FAQs for {{ section_title }}<br />
+            Find a question below
+          </h1>
+        </div>
+      </div>
+    </div>
+  </header>
+
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
