--- a/ap/templates/users/index.html
+++ b/ap/templates/users/index.html
@@ -24,9 +24,9 @@
         </h1>
 
         <ul>
-        {% for user in users  %}
+        {% for athlete in athletes  %}
         <li>
-          <a href="{% url 'users:profile' user.username %}">{{ user.get_full_name }} ({{user.username}})</a>
+          <a href="{% url 'users:profile' athlete.username %}">{{ athlete.get_full_name }} ({{athlete.username}})</a>
         </li>
         {% endfor %}
         </ul>
@@ -34,5 +34,32 @@
       </div>
     </div>
   </div>
+
+
+  <nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+
+      {% if athletes.has_previous %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ athletes.previous_page_number }}" tabindex="-1">Previous</a>
+        </li>
+      {% endif %}
+
+        {% if athletes.has_previous %}
+          <li class="page-item"><a class="page-link" href="?page={{ athletes.number|add:"-1" }}">{{ athletes.number|add:"-1" }}</a></li>
+        {% endif %}
+        <li class="page-item active"><a class="page-link disabled" href="?page={{ athletes.number }}">{{ athletes.number }}</a></li>
+        {% if athletes.has_next %}
+          <li class="page-item"><a class="page-link" href="?page={{ athletes.number|add:"1" }}">{{ athletes.number|add:"1" }}</a></li>
+        {% endif %}
+
+      {% if athletes.has_next %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ athletes.next_page_number }}" tabindex="-1">Next</a>
+        </li>
+      {% endif %}
+
+    </ul>
+</nav>
 
 {% endblock content %}
