Top margin for content on all views

--- a/ap/templates/faqs/section.html
+++ b/ap/templates/faqs/section.html
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <h1>
+        <h1 class="mt-4">
           {{ section_title }}
         </h1>
 
