--- a/ap/templates/events/index.html
+++ b/ap/templates/events/index.html
@@ -18,49 +18,53 @@
   </header>
 
   <div class="container">
-      <h1>
-        {% if tense == "past" %}Past{% else %}Upcoming{% endif %} Events
-      </h1>
-      <table class="table">
-        <tr>
-          <th>
-            Date
-          </th>
-          <th>
-            Event
-          </th>
-          <th>
-            Type
-          </th>
-          <th>
-            Region
-          </th>
-        </tr>
-      {% for event in events_list %}
-        <tr>
-          <td>
-            {{ event.start|date:"M j, Y" }}
-          </td>
-          <td>
-            <a href="{% url 'events:detail' event.id event.slug %}">{{ event }}</a>
-          </td>
-          <td>
-            {{ event.get_event_type_display }}
-          </td>
-          <td>
-            {{ event.city }}, {{ event.state_province }} ({{ event.get_country_display }})
-          </td>
-        </tr>
-      {% endfor %}
-      </table>
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 class="mt-4">
+            {% if tense == "past" %}Past{% else %}Upcoming{% endif %} Events
+          </h1>
+          <table class="table">
+            <tr>
+              <th>
+                Date
+              </th>
+              <th>
+                Event
+              </th>
+              <th>
+                Type
+              </th>
+              <th>
+                Region
+              </th>
+            </tr>
+          {% for event in events_list %}
+            <tr>
+              <td>
+                {{ event.start|date:"M j, Y" }}
+              </td>
+              <td>
+                <a href="{% url 'events:detail' event.id event.slug %}">{{ event }}</a>
+              </td>
+              <td>
+                {{ event.get_event_type_display }}
+              </td>
+              <td>
+                {{ event.city }}, {{ event.state_province }} ({{ event.get_country_display }})
+              </td>
+            </tr>
+          {% endfor %}
+          </table>
 
-      {% if tense == "past" %}
-        <a class="btn btn-primary" href="{% url 'events:index' %}">See Upcoming Events</a>
-      {% else %}
-        <a class="btn btn-primary" href="{% url 'events:index' tense='past' %}">See Past Events</a>
-      {% endif %}
+          {% if tense == "past" %}
+            <a class="btn btn-primary" href="{% url 'events:index' %}">See Upcoming Events</a>
+          {% else %}
+            <a class="btn btn-primary" href="{% url 'events:index' tense='past' %}">See Past Events</a>
+          {% endif %}
 
-      {% include 'core/_pagination.html' with items=events_list %}
+          {% include 'core/_pagination.html' with items=events_list %}
 
+      </div>
+    </div>
   </div>
 {% endblock content %}
