--- a/ap/templates/events/index.html
+++ b/ap/templates/events/index.html
@@ -4,18 +4,8 @@
 
 {% block content %}
 
-  <header class="masthead events text-white text-center">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Find an Event<br />
-            Bike, Swim, Run, Hike
-          </h1>
-        </div>
-      </div>
-    </div>
-  </header>
+  {% include 'events/_masthead_search.html' %}
+
 
   <div class="container">
       <div class="row">
