--- a/ap/templates/base.html
+++ b/ap/templates/base.html
@@ -21,7 +21,8 @@
       <link href="{% static 'scss/style.scss' %}" type="text/x-scss" rel="stylesheet" charset="utf-8"/>
     {% endcompress %}
 
-    {# Google fonts must be outside of compressor #}
+    {# Google fonts and FontAwesome must be outside of compressor #}
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     {% block extra_head %}{% endblock extra_head %}
