--- a/ap/templates/events/_masthead_search.html
+++ b/ap/templates/events/_masthead_search.html
@@ -8,10 +8,10 @@
           </h1>
 
           <form action="{% url 'events:search' %}" method="GET">
-            <div class="input-group w-50">
+            <div class="input-group w-50 mx-auto">
               <input type="text" class="form-control" name="q" id="q" placeholder="Search..." value="{{ q }}">
               <span class="input-group-btn">
-                  <button class="btn btn-primary" type="button"><span class="fa fa-search"></span></button>
+                  <button class="btn btn-primary" type="submit"><span class="fa fa-search"></span></button>
               </span>
             </div>
           </form>
