Finalize athletes search

--- a/ap/templates/users/profile.html
+++ b/ap/templates/users/profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load thumbnail %}
-{% load staticfiles %}
+{% load static %}
 
 {% block page_title %}Participants{% endblock page_title %}
 
