--- a/ap/templates/users/index.html
+++ b/ap/templates/users/index.html
@@ -4,17 +4,7 @@
 
 {% block content %}
 
-  <header class="masthead profiles text-white text-center">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Find athletes<br />
-          </h1>
-        </div>
-      </div>
-    </div>
-  </header>
+  {% include 'users/_masthead_search.html' %}
 
   <div class="container">
     <div class="row">
