--- a/ap/templates/contact/success.html
+++ b/ap/templates/contact/success.html
@@ -3,12 +3,22 @@
 {% block page_title %}Thanks{% endblock page_title %}
 
 {% block content %}
+
+  {% include 'contact/_masthead_contact.html' %}
+
+
   <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1 class="mt-4">
+          Thanks
+        </h1>
 
-    <h1>Thanks</h1>
+        <p>We've received your message, and will get back to you.</p>
 
-    <p>We've received your message, and will get back to you.</p>
-
+      </div>
+    </div>
   </div>
+
 
 {% endblock %}
