Show starter map in Organize Event view

--- a/ap/templates/events/organize_event.html
+++ b/ap/templates/events/organize_event.html
@@ -4,6 +4,15 @@
 
 {% block page_title %}Manage events{% endblock page_title %}
 
+{% block extra_head %}
+    <style>
+      #map {
+        height: 550px;
+        width: 700px;
+       }
+    </style>
+{% endblock extra_head %}
+
 {% block content %}
 
   <header class="masthead events text-white text-center mb-4">
@@ -24,10 +33,41 @@
     </h3>
 
     <form action="" method="post">
-      {{form|crispy}}
+      {{ form|crispy }}
+
+      <p>
+        <b>Center this map on the event meeting place:</b><br />
+        <div id="map"></div>
+      </p>
     </form>
 
   </div>
 {% endblock content %}
+
+{% block extra_foot %}
+
+<script>
+  function initMap() {
+
+  gMap = new google.maps.Map(document.getElementById('map'));
+
+  navigator.geolocation.getCurrentPosition(function(position) {
+    // Center on user's current location if geolocation prompt allowed
+    var initialLocation = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+    gMap.setCenter(initialLocation);
+    gMap.setZoom(13);
+  }, function(positionError) {
+    // User denied geolocation prompt - default to Chicago
+    gMap.setCenter(new google.maps.LatLng(39.8097343, -98.5556199));
+    gMap.setZoom(5);
+  });
+}
+</script>
+  <script
+    async
+    defer
+    src="https://maps.googleapis.com/maps/api/js?key={{ google_api_key }}&callback=initMap">
+  </script>
+{% endblock extra_foot %}
 
 
