--- a/ap/templates/events/organize_event.html
+++ b/ap/templates/events/organize_event.html
@@ -49,30 +49,43 @@
 <script>
   function initMap() {
 
-  gMap = new google.maps.Map(document.getElementById('map'));
+    gMap = new google.maps.Map(document.getElementById('map'));
 
-  {# Does this event have an existing location? If so, use it; otherwise set one. #}
-  {% if event.latitude and event.longitude %}
+    {# Does event have an existing location? If so, use it; otherwise set one. #}
+    {% if event.latitude and event.longitude %}
 
-    var initialLocation = new google.maps.LatLng( {{ event.latitude }}, {{ event.longitude }} );
-    gMap.setCenter(initialLocation);
-    gMap.setZoom(13);
+      var marker = new google.maps.LatLng( {{ event.latitude }}, {{ event.longitude }} );
+      gMap.setCenter(marker);
+      gMap.setZoom({{ event.zoom }});
 
-  {% else %}
+    {% else %}
 
-    navigator.geolocation.getCurrentPosition(function(position) {
-      // Center on user's current location if geolocation prompt allowed
-      console.log("have")
-      var initialLocation = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-      gMap.setCenter(initialLocation);
-      gMap.setZoom(13);
-    }, function(positionError) {
-      console.log("dont have")
-      // User denied geolocation prompt - default to Chicago
-      gMap.setCenter(new google.maps.LatLng(39.8097343, -98.5556199));
-      gMap.setZoom(5);
-    });
-  {% endif %}
+      navigator.geolocation.getCurrentPosition(function(position) {
+          // Center on user's current location if geolocation prompt allowed
+          var marker = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+          gMap.setCenter(marker);
+          gMap.setZoom({{ event.zoom }});
+        }, function(positionError) {
+          // User denied geolocation prompt - default to Chicago
+          var marker = new google.maps.LatLng(39.8097343, -98.5556199)
+          gMap.setCenter(marker);
+          gMap.setZoom(5);
+        }
+      );
+
+    {% endif %}
+
+      // Update lat, lng, zoom fields when map is moved or zoomed.
+      gMap.addListener('dragend', function() {
+        var newCenter = gMap.getCenter();
+        $('#id_latitude').val(newCenter.lat());
+        $('#id_longitude').val(newCenter.lng());
+      });
+
+      gMap.addListener('zoom_changed', function() {
+        var newZoom = gMap.getZoom();
+        $('#id_zoom').val(newZoom);
+      });
   }
 </script>
   <script
