--- a/ap/templates/events/organize_event.html
+++ b/ap/templates/events/organize_event.html
@@ -105,6 +105,12 @@
         </div>
       </div>
 
+      <div class="row mt-4">
+        <div class="col">
+          {{ form.published|as_crispy_field }}
+        </div>
+      </div>
+
       <div class="row mt-4 mb-4">
         <div class="col">
           <button class="btn btn-primary" type="submit">Save Changes</button>
