--- a/ap/templates/events/organize_event.html
+++ b/ap/templates/events/organize_event.html
@@ -5,12 +5,14 @@
 {% block page_title %}Manage events{% endblock page_title %}
 
 {% block extra_head %}
-    <style>
-      #map {
-        height: 550px;
-        width: 700px;
-       }
-    </style>
+  <style>
+    #map {
+      height: 550px;
+      width: 700px;
+      }
+  </style>
+
+  <link href="{% static 'node_modules/tempusdominus-bootstrap-4/build/css/tempusdominus-bootstrap-4.min.css' %}" rel="stylesheet" type="text/css">
 {% endblock extra_head %}
 
 {% block content %}
@@ -29,7 +31,7 @@
   <div class="container">
 
     <h3>
-      Edit Event: {{ event.title }}, {{ event.start|date:"M j, Y" }}
+      Edit Event: {{ event.title }}, {{event.start|date:"Y-m-d h:m:s"}}
     </h3>
 
     <form action="" method="post">
@@ -43,10 +45,22 @@
         </div>
        </div>
 
-    <form action="" method="post">
       <div class="row">
         <div class="col">
-          {{ form.start|as_crispy_field }}
+
+          <label for="id_start" class="col-form-label">Start Date and Time</label>
+          <div class="input-group date" id="datetimepicker" data-target-input="nearest">
+            <input
+              type="text" class="form-control datetimepicker-input"
+              data-target="#id_start" name="start" id="id_start"
+              value={{event.start|date:"Y-m-d h:m:s"}}
+            />
+            <div class="input-group-append" data-target="#id_start" data-toggle="datetimepicker">
+              <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+            </div>
+          </div>
+          <small id="hint_id_start" class="form-text text-muted">Date and time for start of event. Currently saved: {{event.start|date:"Y-m-d h:m:s"}}</small>
+
         </div>
       </div>
 
@@ -117,7 +131,6 @@
         </div>
       </div>
 
-
     </form>
 
   </div>
@@ -126,6 +139,15 @@
 {% block extra_foot %}
 
 <script>
+  // Enable datetime picker
+  $(function () {
+      $('#id_start').datetimepicker(
+        {
+          "format": "YYYY-MM-DD h:mm:ss",
+        }
+      );
+  });
+
   function initMap() {
 
     gMap = new google.maps.Map(document.getElementById('map'));
@@ -172,6 +194,11 @@
     defer
     src="https://maps.googleapis.com/maps/api/js?key={{ google_api_key }}&callback=initMap">
   </script>
+
+  {# Datepicker support #}
+  <script src="{% static 'node_modules/moment/min/moment.min.js' %}"></script>
+  <script src="{% static 'node_modules/bootstrap-datetimepicker/js/bootstrap-datetimepicker.js' %}"></script>
+
 {% endblock extra_foot %}
 
 
